--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "description": "A Node.js sandbox.",
     "version": "0.0.1",
     "dependencies": {
-        "express": "3.0.6"
+        "express": "3.0.6",
+        "mongoose": "3.5.4"
     }
 }
