--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
     "name": "Nodium",
+    "author": "Carlos Mecha <mecha.carlos@gmail.com>",
     "description": "A Node.js sandbox.",
     "version": "0.0.1",
+    "bin": {
+        "nodium": "./bin/nodium"
+    },
+    "scripts": {
+        "start": "node server.js"
+    },
     "dependencies": {
-        "express": "3.0.6",
-        "mongoose": "3.5.4"
+        "express": "3.0.x",
+        "mongoose": "3.5.x"
     }
 }
