--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     },
     "dependencies": {
         "express": "3.0.x",
-        "mongoose": "3.5.x"
+        "mongoose": "3.5.x",
+        "underscore": "1.4.x",
+        "consolidate": "0.7.x",
+        "moment": "1.7.x"
     }
 }
